# software_renderer_0

./: CMakeLists.txt
src/: main.c
